v1.4.0-1.16.5-forge - Enchanted Item now output enchanted book too - Left panel in Uncrafting Table screen no long show when there is no valid item to uncraft - Added 2 screen to let player modify config values in game (OP only)